add technologies with ref to info pages; fix literal errors

--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Zastępstwa",
-	"short_name": "Zastępstwa",
+	"name": "HeartTeam",
+	"short_name": "HR",
 	"start_url": "/",
 	"display": "standalone",
 	"orientation": "any",
